# picopegsol

./: CMakeLists.txt  README.md  graphlib.c  pegsolitaire.c  pegsolpico.uf2
